# sinkserver

./: Cargo.toml  Makefile  README.md  dockerfile.client  dockerfile.server
src/: client.rs  hashwriter.rs  main.rs  server.rs
