[package]
name = "sinkserver"
version = "0.1.0"
authors = ["dougfort <doug.fort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix-rt = "1.0"
actix-web = "2.0"
http = "0.2"
log = "0.4"
env_logger = "0.7"
ring = "0.17.0-alpha.2"
hex = "0.4.2"
